syntax = "proto3";

package TW.EthereumRLP.Proto;
option java_package = "wallet.core.jni.proto";

import "Common.proto";

// List of elements.
message RlpList {
    repeated RlpItem items = 1;
}

// RLP item.
message RlpItem {
    oneof item {
        string string_item = 1;
        uint64 number_u64 = 2;
        bytes number_u256 = 3;
        string address = 4;
        bytes data = 5;
        RlpList list = 6;
//        bytes raw_list = 7;
    }
}

// RLP encoding input.
message EncodingInput {
    // An item or a list to encode.
    RlpItem item = 1;
}

/// RLP encoding output.
message EncodingOutput {
    // An item RLP encoded.
    bytes encoded = 1;

    // Error code, 0 is ok, other codes will be treated as errors.
    Common.Proto.SigningError error = 2;

    // Error code description.
    string error_message = 3;
}
